--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.28.1",
     "react-tabs": "^6.1.0",
     "sort-by": "^0.0.2",
+    "sweetalert2": "^11.15.9",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
